catkin_ws/logs/rgbd_slam/build.make.008.log
[  0%] Built target std_msgs_generate_messages_cpp
[  0%] Built target roscpp_generate_messages_py
[  0%] Built target rosgraph_msgs_generate_messages_py
[  0%] Built target geometry_msgs_generate_messages_cpp
[  0%] Built target geometry_msgs_generate_messages_py
[  0%] Built target roscpp_generate_messages_lisp
[  0%] Built target roscpp_generate_messages_cpp
[  0%] Built target rosgraph_msgs_generate_messages_lisp
[  0%] Built target rosgraph_msgs_generate_messages_cpp
[  0%] Built target std_msgs_generate_messages_py
[  0%] Built target geometry_msgs_generate_messages_lisp
[  0%] Built target std_msgs_generate_messages_lisp
[ 78%] Built target frontend
[35m[1mScanning dependencies of target rgbd_slam[0m
[ 92%] [32mBuilding CXX object CMakeFiles/rgbd_slam.dir/src/main.cpp.o[0m
[ 92%] [32mBuilding CXX object CMakeFiles/rgbd_slam.dir/src/RosHandler.cpp.o[0m
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/rgbd_slam/src/RosHandler.cpp: In member function ‘void RosHandler::lpeCallback(geometry_msgs::PoseStamped)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/rgbd_slam/src/RosHandler.cpp:46:21: error: invalid use of member function (did you forget the ‘()’ ?)
  _lpe.topLeftCorner = q.matrix(); 
                     ^
make[2]: *** [CMakeFiles/rgbd_slam.dir/src/RosHandler.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/rgbd_slam/src/main.cpp: In function ‘int main(int, char**)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/rgbd_slam/src/main.cpp:206:15: warning: variable ‘couldNotMatchCounter’ set but not used [-Wunused-but-set-variable]
  unsigned int couldNotMatchCounter = 0;
               ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/rgbd_slam/src/main.cpp:298:21: warning: variable ‘dif’ set but not used [-Wunused-but-set-variable]
  double start, end, dif; // debug
                     ^
make[1]: *** [CMakeFiles/rgbd_slam.dir/all] Error 2
make: *** [all] Error 2
